    - x64: linker no longer invoked through dmd
  * miscellaneous
    - added command "Open Folder in Windows Explorer" to project and folder context menu
    - goto definition now falls back to JSON information if semantic analysis yields no result
    - improved indentation after opening parenthesis to follow next token
    - added commands "Collapse unittests" and "Collapse disabled" to the outlining menu
    - dviewhelper.dll from cv2pdb now avoids being unloaded after debugger expression evaluation using visualizers
  * changed license to Boost

unreleased Version 0.3.38

  * updated to cv2pdb 0.28 
    - support mspdb120.dll from VS 2013
    - bugzilla 11537: improved search for appropriate mspdb*.dll if multiple version of VS installed
  * updated to mago 0.9
    - bugzilla 11547: remove error message when stopping debugging
    - bugzilla 11437: debug info rejected if records don't have "recommended" order
    - bugzilla 11030: set breakpoint in all template instances
  * updated dparser to 08f760b6181d1e40a29f3e03a7eafcd40bf4dc34
    - added options to enable/disable mixin analysis and UFCS expansions
  * added support for string import dependencies (needs dmd 2.065)
  * fixed default library path for x64 (contained spaces, but were not quoted,
    added default for 8.1 SDK)
  * fixed passing quoted library paths to linker
  * fixed project and completion icons being converted to 16 color bitmaps
  * completion box now displays appropriate icons and tooltip with dparser
  * tool tips now expand some Ddoc macros for better readability

  * update SDK conversion for VS2013 and Windws SDK 8.1
  * change some default colors when using dark theme in VS 2012+ (restart required)
  * Windows SDK 8.0/8.1 detection
  * fix bad "\n" in default x64 library search path
  * x64 executable and library search path not correctly saved for next VS start
  * improve project automation to mute NuGet (still empty project pretended)